# Agentic-CRAG

./: .gitignore  README.md  app.py  config.py  evaluation.py  main.py  pyproject.toml  requirements.txt  utils.py
Data/: 2010. Noi Khoa YHCT - GS Hoang Bao Chau. NXB Thoi Dai.docx  bệnh ngũ quan.docx  nhi-khoa-y-hoc-co-truyen.docx  noi-khoa-y-hoc-co-truyen.docx
modules/: __init__.py  components.py  graph.py  ingestion.py  models.py  settings.py  text_utils.py
modules/ingestion/: __init__.py  loaders.py  sources.py  splitters.py
modules/rag/: __init__.py  chains.py  graph.py  ingestion.py  service.py
modules/retrieval/: __init__.py  retriever.py  vector_store.py
modules/ui/: formatting.py  gradio_app.py  handlers.py
notebooks/: Agentic_Corrective_RAG_System_with_LangGraph.ipynb
